package com.byticher.gif.const

object TestTags {

    fun getGifCardTagWithId(id: Int) = "${GIF_CARD}_$id"

    const val GIF_SCREEN = "GIF_SCREEN"
    const val ANIMATED_TITLE = "ANIMATED_TITLE"
    const val GIF_CARD_STACK = "GIF_CARD_STACK"
    const val SWIPABLE = "SWIPABLE"
    const val GIF_CARD = "GIF_CARD"
    const val MY_TOP_BAR = "MY_TOP_BAR"
    const val GIF_IN_REVIEW = "GIF_IN_REVIEW"
}